# pants-build-study

./: Makefile  README.md  README_001.md  README_002.md  README_003.md  README_004.md  README_005.md  README_006.md  README_007.md  README_008.md  README_009.md  pants.toml
.github/workflows/: test.yml
build-support/: pylint.config  pyproject.toml
src/protos/helloworld/v1/: BUILD
src/python/console-app/: BUILD  pyproject.toml
src/python/console-app/console_app/: main.py
src/python/console-app/console_app/util/: BUILD  util.py
src/python/console-app/tests/util/: BUILD  util_test.py
src/python/console2-app/: pyproject.toml
src/python/console2-app/console2_app/: main.py
src/python/console2-app/console2_app/util/: BUILD  util.py
src/python/grpc-client/: BUILD  pyproject.toml
src/python/grpc-client/grpc_client/: BUILD  main.py
src/python/grpc-server/: BUILD  pyproject.toml
src/python/grpc-server/grpc_server/: main.py
src/python/old-app/: BUILD  pyproject.toml
src/python/old-app/old_app/: main.py
src/python/old-app/old_app/util/: BUILD  util.py
