[tool.poetry]
name = "grpc-client"
version = "0.1.0"
description = ""
authors = ["pecolynx <pecolynx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpc-stubs = "^1.53.0.3"
grpcio = "1.58.0"
protobuf = "^4.24.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
